--- a/cult-fit/src/components/home/style.css
+++ b/cult-fit/src/components/home/style.css
@@ -12,6 +12,11 @@ body {
 .flot1 {
   float: left;
   margin-right: 3rem;
+  opacity: 70%;
+}
+
+.flot1:hover {
+  opacity: 100%;
 }
 .opt {
   margin: 2rem;
@@ -34,7 +39,7 @@ img {
   color: aliceblue;
   position: relative;
   top: 22px;
-  left: 158px;
+  left: 128px;
 }
 
 h5 {
@@ -58,11 +63,21 @@ h5 {
   letter-spacing: 0.5px;
   line-height: 22px;
   margin-right: 10px;
-  margin-top: 0px;
+  margin-top: -4px;
   max-width: 95px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  height: 29px;
+  padding-left: 18px;
+  padding-right: 16px;
+  padding-top: 7px;
+  padding-bottom: 27px;
+  border-radius: 3px;
+}
+
+.location:hover {
+  background: rgb(255 255 255 / 10%);
 }
 
 .app {
@@ -76,4 +91,47 @@ h5 {
   letter-spacing: 0.5px;
   line-height: 22px;
   white-space: nowrap;
+  border: 2px solid;
+  padding: 3px;
+  border-radius: 4px;
+  position: relative;
+  left: 11px;
+  bottom: 3px;
+  padding-left: 6px;
+  padding-right: 6px;
+}
+
+.app:hover {
+  border: 2px solid rgba(255, 255, 255, 0.5);
+}
+
+.icon {
+  transition: all 100ms ease;
+  margin-right: 1rem;
+  margin-left: 2rem;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  padding: 4px 10px;
+  position: relative;
+  bottom: 12px;
+}
+
+.icon:hover {
+  background: rgba(255, 255, 255, 0.1);
+}
+
+.icon1 {
+  transition: all 100ms ease;
+  width: 30px;
+  height: 30px;
+  padding-left: 5px;
+  border-radius: 50%;
+  padding-top: 2px;
+  position: relative;
+  bottom: 9.5px;
+}
+
+.icon1:hover {
+  background: rgba(255, 255, 255, 0.1);
 }
