--- a/cult-fit/src/components/home/style.css
+++ b/cult-fit/src/components/home/style.css
@@ -1,5 +1,6 @@
 body {
-  background-color: black;
+  background-color: #1a1d2b;
+  box-sizing: border-box;
 }
 
 .flot {
@@ -26,12 +27,12 @@ body {
   float: left;
 }
 
-img {
+a > img {
   position: relative;
   opacity: 1;
   transition: opacity 150ms ease 0s;
   top: 9px;
-  left: 9px;
+  left: 25px;
   width: 40%;
 }
 
@@ -39,14 +40,15 @@ img {
   color: aliceblue;
   position: relative;
   top: 22px;
-  left: 128px;
+  left: 119px;
 }
 
 h5 {
   cursor: pointer;
   margin: 0;
   color: white;
-  font-size: 18px;
+  font-size: 15px;
+  font-weight: 700;
   font-family: Inter-Bold, Helvetica Neue, Helvetica, Roboto, Arial, sans-serif;
   letter-spacing: 0px;
   line-height: 22px;
@@ -91,7 +93,7 @@ h5 {
   letter-spacing: 0.5px;
   line-height: 22px;
   white-space: nowrap;
-  border: 2px solid;
+  border: 1px solid;
   padding: 3px;
   border-radius: 4px;
   position: relative;
@@ -102,7 +104,7 @@ h5 {
 }
 
 .app:hover {
-  border: 2px solid rgba(255, 255, 255, 0.5);
+  border: 1px solid rgba(255, 255, 255, 0.5);
 }
 
 .icon {
@@ -134,4 +136,9 @@ h5 {
 
 .icon1:hover {
   background: rgba(255, 255, 255, 0.1);
+}
+
+.fa-map-marker {
+  font-size: 17px;
+  margin-left: 6px;
 }
