add card and demo components and style these components

--- a/cult-fit/src/components/fitness/fitness.css
+++ b/cult-fit/src/components/fitness/fitness.css
@@ -8,8 +8,8 @@
   padding: 14px;
   background-color: #393a3b;
   width: 100%;
-  position: relative;
-  bottom: 8.9rem;
+  position: absolute;
+  bottom: 42rem;
 }
 
 .nav1 {
