--- a/cult-fit/src/components/home/home.css
+++ b/cult-fit/src/components/home/home.css
@@ -1,7 +1,7 @@
 .homelogo {
   width: 30%;
   /* text-align: center; */
-  margin-top: 5rem;
+  margin-top: 15rem;
 }
 
 .center {
@@ -16,7 +16,9 @@
 
 .gredi {
   position: absolute;
-  z-index: -2;
+  z-index: -5;
+  height: 1000%;
+  width: 100%;
 }
 
 .svg2 {
@@ -27,26 +29,28 @@
 
 .svg3 {
   margin-top: -50rem;
-  margin-left: 62.8rem;
-  width: 39rem;
-  transform: rotate(8deg);
+  margin-left: 61.3rem;
+  width: 31rem;
+  transform: rotatey(6deg);
 }
 
 .svg4 {
-  margin-top: -18rem;
+  margin-top: -21rem;
   margin-left: 61rem;
-  width: 40rem;
+  width: 33rem;
+  position: absolute;
+  transform: rotate(356deg);
 }
 
 .homeh1 {
   text-align: center;
   width: 48rem;
-  margin-left: 25rem;
+  margin-left: 23rem;
   margin-top: -6rem;
 }
 
 .homebtn {
-  margin-left: 44rem;
+  margin-left: 41.6rem;
   margin-top: 2rem;
 }
 
@@ -65,11 +69,265 @@
 }
 
 .erro {
-  margin-left: 49rem;
+  margin-left: 46.6rem;
   width: 1.55rem;
   margin-top: 1.5rem;
 }
-
+/* 
 .top {
   margin-top: -3rem;
+} */
+
+.video {
+  display: block;
+  width: 100%;
+  transition: opacity 600ms ease 0s;
+  position: absolute;
+  object-fit: cover;
+  height: 126vh;
+  will-change: transform;
+  opacity: 1;
+  z-index: -2;
+  bottom: -9rem;
+}
+
+.ianimate {
+  position: absolute;
+  width: 37%;
+  left: 11rem;
+  top: 29rem;
+}
+
+.ianimate1 {
+  position: absolute;
+  width: 40%;
+  left: 53rem;
+  top: 30rem;
+}
+
+.box1 {
+  width: 12rem;
+  text-align: center;
+  line-height: 25px;
+  float: left;
+}
+
+.box {
+  position: relative;
+  float: left;
+  margin-left: 4rem;
+  left: 6.5rem;
+  top: 12rem;
+
+  background: rgb(255 255 255 / 5%);
+  border: 1pxsolidrgb (255 255 255 / 20%);
+  flex-basis: 30%;
+  backdrop-filter: blur(50px);
+  border-radius: 10px;
+  padding: 25px 0px 20px;
+  transition: all 300ms ease;
+  cursor: pointer;
+  background: rgb(255 255 255 0.05);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  padding: 4px 5rem;
+}
+
+.imgc {
+  margin: 1rem auto;
+  width: 8rem;
+}
+
+.h1 {
+  position: absolute;
+  top: 32rem;
+  left: 34rem;
+  width: 26rem;
+  font-weight: revert;
+}
+
+.anim1 {
+  width: 30rem;
+  position: absolute;
+  top: 64rem;
+  right: 62rem;
+}
+.anim2 {
+  width: 24rem;
+  position: absolute;
+  top: 63rem;
+  right: 5rem;
+}
+.anim3 {
+  width: 20rem;
+  position: absolute;
+  top: 66rem;
+  right: 36rem;
+}
+
+.p1 {
+  position: relative;
+  left: -47rem;
+  top: 88.3rem;
+  width: 16rem;
+  height: 20rem;
+  border-radius: 9px;
+}
+
+.p4 {
+  width: 16rem;
+  position: relative;
+  height: 20rem;
+  border-radius: 9px;
+  top: 28.3rem;
+  left: 16rem;
+}
+
+.p5 {
+  position: relative;
+  border-radius: 9px;
+  width: 16rem;
+  height: 20rem;
+  bottom: -8.3rem;
+  left: 48.7rem;
+}
+
+.p6 {
+  border-radius: 9px;
+  position: relative;
+  width: 16rem;
+  bottom: 11.7rem;
+  height: 20rem;
+  left: 32.4rem;
+}
+
+.p3 {
+  position: relative;
+  top: 69rem;
+  width: 16rem;
+  height: 20rem;
+  border-radius: 9px;
+  left: 16rem;
+}
+
+.p7 {
+  width: 16rem;
+  height: 20rem;
+  border-radius: 9px;
+  position: relative;
+  left: 32.5rem;
+  bottom: 11rem;
+}
+
+.p8 {
+  position: relative;
+  left: 49rem;
+  bottom: 31rem;
+  width: 16rem;
+  height: 20rem;
+  border-radius: 9px;
+}
+
+.p2 {
+  width: 16rem;
+  height: 20rem;
+  position: relative;
+  top: 88.3rem;
+  border-radius: 9px;
+  left: 65.4rem;
+}
+
+.row {
+  width: 76rem;
+}
+
+.demo1 {
+  width: 22rem;
+}
+
+.demo2 {
+  width: 22rem;
+}
+
+.demo3 {
+  width: 22rem;
+}
+
+.col-4 {
+  padding: 0 2rem;
+}
+
+.dd1 {
+  position: relative;
+  left: 11rem;
+  bottom: 16rem;
+  width: 75rem;
+}
+
+.demoim1 {
+  width: 7rem;
+}
+
+.demodiv1 {
+  margin-top: -5rem;
+  margin-left: 2rem;
+}
+
+.btm1 {
+  margin-top: 3rem;
+  position: relative;
+  right: 2rem;
+}
+
+li {
+  margin-left: -1rem;
+  font-size: 21px;
+  opacity: 70%;
+  line-height: 36px;
+}
+
+.demodiv1 h6 {
+  opacity: 100%;
+}
+
+.demo1:hover {
+  width: 23rem;
+}
+
+.demo3:hover {
+  width: 23rem;
+}
+
+.demo2:hover {
+  width: 23rem;
+}
+
+.headd {
+  text-align: center;
+  position: relative;
+  bottom: 24rem;
+}
+
+.fitli {
+  position: relative;
+  top: 6rem;
+  font-size: 19px;
+  font-weight: 500;
+}
+
+.gredi1 {
+  position: absolute;
+  left: -8rem;
+  bottom: 2rem;
+  z-index: -2;
+  padding: 3rem;
+  width: 44rem;
+}
+
+.gredi2 {
+  position: absolute;
+  bottom: 10rem;
+  left: 23rem;
+  width: 29rem;
+  padding: 3rem;
+  z-index: -2;
 }
