--- a/cult-fit/src/components/header/style.css
+++ b/cult-fit/src/components/header/style.css
@@ -11,7 +11,7 @@ body {
   margin: 0.9rem;
   width: 7rem;
   position: fixed;
-  z-index: +3;
+  z-index: +5;
 }
 
 h5 {
@@ -39,7 +39,7 @@ a:hover {
   position: fixed;
   top: 1.2rem;
   left: 30rem;
-  z-index: +3;
+  z-index: +4;
 }
 
 .jpr1 {
@@ -53,7 +53,7 @@ a:hover {
   margin-left: 7px;
 }
 
-.jpr {
+.zis {
   color: aliceblue;
   border-radius: 3px;
   padding: 4px 8px;
@@ -62,11 +62,12 @@ a:hover {
   margin-left: 71rem;
 }
 
-.jpr:hover {
+.zis:hover {
   background: #3d3c3c;
   color: aliceblue;
   border-radius: 3px;
   padding: 4px 8px;
+  width: fit-content;
 }
 
 .app {
