--- a/cult-fit/src/components/home/home.css
+++ b/cult-fit/src/components/home/home.css
@@ -17,7 +17,7 @@
 .gredi {
   position: absolute;
   z-index: -5;
-  height: 1000%;
+  height: 1870%;
   width: 100%;
 }
 
@@ -317,7 +317,7 @@ li {
 .gredi1 {
   position: absolute;
   left: -8rem;
-  bottom: 2rem;
+  bottom: 10rem;
   z-index: -2;
   padding: 3rem;
   width: 44rem;
@@ -325,9 +325,375 @@ li {
 
 .gredi2 {
   position: absolute;
-  bottom: 10rem;
+  bottom: 19rem;
   left: 23rem;
-  width: 29rem;
-  padding: 3rem;
+  width: 31rem;
+  padding: 3rem rem;
   z-index: -2;
+}
+
+.bestbtn1 {
+  border-radius: 5px;
+  border: 1px solid transparent;
+  padding: 5px 2.5rem;
+  background: rgb(255 255 255 / 10%);
+  color: white;
+  backdrop-filter: blur(50px);
+  font-weight: 700;
+  margin-left: -1.7rem;
+  margin-top: 9rem;
+}
+
+.bestbtn1:hover {
+  background: rgb(255 255 255 / 20%);
+}
+
+.bestbtn2 {
+  border-radius: 5px;
+  border: 1px solid transparent;
+  padding: 5px 2.5rem;
+  background: rgb(255 255 255 / 10%);
+  color: white;
+  backdrop-filter: blur(50px);
+  font-weight: 700;
+  margin-left: -1.7rem;
+  margin-top: 6rem;
+}
+
+.bestbtn2:hover {
+  background: rgb(255 255 255 / 20%);
+}
+
+.bestbtn3 {
+  border-radius: 5px;
+  border: 1px solid transparent;
+  padding: 5px 2.5rem;
+  background: rgb(255 255 255 / 10%);
+  color: white;
+  backdrop-filter: blur(50px);
+  font-weight: 700;
+  margin-left: -1.7rem;
+  margin-top: 6.3rem;
+}
+
+.bestbtn3:hover {
+  background: rgb(255 255 255 / 20%);
+}
+
+.bestbtn-1 {
+  border-radius: 5px;
+  padding: 6px 2.4rem;
+  margin-left: 159px;
+  width: max-content;
+  position: relative;
+  bottom: 2.3rem;
+  font-weight: 700;
+  color: #f06055;
+}
+
+.bestbtn-1:hover {
+  color: black;
+}
+
+.bestbtn-2 {
+  border-radius: 5px;
+  padding: 6px 2.4rem;
+  margin-left: 159px;
+  width: max-content;
+  position: relative;
+  bottom: 2.3rem;
+  font-weight: 700;
+  color: #f06055;
+}
+
+.bestbtn-2:hover {
+  color: black;
+}
+
+.bestbtn-3 {
+  border-radius: 5px;
+  padding: 6px 2.4rem;
+  margin-left: 159px;
+  width: max-content;
+  position: relative;
+  bottom: 2.3rem;
+  font-weight: 700;
+  color: #f06055;
+}
+
+.bestbtn-3:hover {
+  color: black;
+}
+
+.raw2 {
+  text-align: left;
+  float: right;
+  position: relative;
+  right: 9rem;
+  bottom: 2rem;
+}
+.raw1 {
+  text-align: left;
+  float: right;
+  position: relative;
+  right: 9rem;
+  bottom: 5rem;
+}
+
+.tpcol1 {
+  background-image: url(https://cdn-images.cure.fit/www-curefit-com/image/upload/c_fill,w_400,ar_1.164,q_auto:eco,dpr_1.25,f_auto,fl_progressive//image/test/four-square-card/cult-transform-glass-green.png);
+  width: 31rem;
+  height: 27rem;
+  background-repeat: no-repeat;
+  margin: 0 2rem;
+}
+
+.tpcol2 {
+  background-image: url(https://cdn-images.cure.fit/www-curefit-com/image/upload/c_fill,w_400,ar_1.164,q_auto:eco,dpr_1.25,f_auto,fl_progressive//image/test/four-square-card/glass-blog-multi-color.png);
+  width: 31rem;
+  height: 27rem;
+  background-repeat: no-repeat;
+  margin: 0 2rem;
+}
+.tpcol3 {
+  background-image: url(https://cdn-images.cure.fit/www-curefit-com/image/upload/c_fill,w_400,ar_1.164,q_auto:eco,dpr_1.25,f_auto,fl_progressive//image/test/four-square-card/glass-workout-gear.png);
+  width: 31rem;
+  height: 27rem;
+  background-repeat: no-repeat;
+  margin: 0 2rem;
+}
+
+.tpcol4 {
+  background-image: url(https://cdn-images.cure.fit/www-curefit-com/image/upload/c_fill,w_400,ar_1.164,q_auto:eco,dpr_1.25,f_auto,fl_progressive//image/test/four-square-card/sugar-fit-glass-purple.png);
+  width: 31rem;
+  height: 27rem;
+  background-repeat: no-repeat;
+  margin: 0 2rem;
+}
+
+.title {
+  padding: 1rem;
+}
+
+.sign {
+  position: relative;
+  bottom: 6rem;
+  left: 26rem;
+}
+
+.sign img {
+  width: 3rem;
+}
+
+.tpcol1:hover {
+  box-shadow: 0px 0px 20px 12px #070707;
+}
+
+.tpcol2:hover {
+  box-shadow: 0px 0px 20px 12px #070707;
+}
+
+.tpcol3:hover {
+  box-shadow: 0px 0px 20px 12px #070707;
+}
+
+.tpcol4:hover {
+  box-shadow: 0px 0px 20px 12px #070707;
+}
+
+.tip {
+  padding: 3rem;
+  position: relative;
+  left: 9rem;
+  background-color: #85a4bf;
+  border-radius: 20px;
+  top: 5rem;
+}
+
+.tipc1 {
+  width: 19rem;
+  margin-right: 3rem;
+}
+
+.imgr1 {
+  width: 21rem;
+  border-radius: 25px;
+  margin-left: -3rem;
+}
+
+.imgr1 {
+  width: 21rem;
+  border-radius: 25px;
+  margin-left: 1rem;
+}
+
+.imgr2 {
+  width: 21rem;
+  border-radius: 25px;
+  margin-left: 4rem;
+}
+
+.imgr3 {
+  width: 21rem;
+  border-radius: 25px;
+  margin-left: 1rem;
+}
+.imgr4 {
+  width: 21rem;
+  border-radius: 25px;
+  margin-left: 4rem;
+}
+
+.end {
+  margin-bottom: 1rem;
+}
+
+.enda a {
+  display: block;
+  text-align: left;
+  cursor: default;
+  margin: 0;
+  color: rgb(0 0 0 / 70%);
+  font-size: 18px;
+  font-family: Inter-Medium, Helvetica Neue, Helvetica, Roboto, Arial,
+    sans-serif;
+  letter-spacing: 0px;
+  line-height: 39px;
+  white-space: nowrap;
+  margin-bottom: 1rem;
+  width: 18rem;
+  padding-left: 14px;
+  padding-top: 5px;
+  height: 3rem;
+  border-radius: 24px;
+  margin-left: -1rem;
+  margin-bottom: 1rem;
+  font-weight: 600;
+}
+
+.enda a:hover {
+  background: white;
+  color: #070707;
+}
+
+.enda {
+  margin-top: 4rem;
+}
+
+.eq {
+  margin-left: 0rem;
+  margin-top: 4rem;
+}
+
+.fash {
+  position: relative;
+  top: 12rem;
+  left: 8rem;
+  border-radius: 32px;
+  padding: 4rem;
+  height: 25rem;
+  width: 76.6rem;
+  background-image: url(https://cdn-images.cure.fit/www-curefit-com/image/upload/c_fill,w_1200,ar_2.66,q_auto:eco,dpr_1.25,f_auto,fl_progressive//image/test/download-app/download-app-variant-2.png);
+}
+
+.hh {
+  width: 24rem;
+}
+
+.h6 {
+  padding-top: 2rem;
+  padding-bottom: 7rem;
+}
+
+.applelogo {
+  float: left;
+}
+
+.im1 {
+  width: 9rem;
+}
+
+.im2 {
+  width: 10rem;
+  margin: 0 1rem;
+}
+
+.next {
+  text-align: center;
+  margin-top: 20rem;
+}
+
+.n1 {
+  font-weight: 700;
+  font-size: 70px;
+  padding: 2rem;
+}
+
+.na1 {
+  background-image: url(https://cdn-images.cure.fit/www-curefit-com/image/upload/c_fill,w_600,q_auto:eco,dpr_1.25,f_auto,fl_progressive//image/test/join-the-cult/career-at-cult.png);
+  width: 31rem;
+  height: 19rem;
+  margin-left: 10rem;
+  border-radius: 32px;
+  /* background-image: url(https://cdn-images.cure.fit/www-curefit-com/image/upload/c_fill,w_600,ar_2.4,q_auto:eco,dpr_2,f_auto,fl_progressive//image/test/join-the-cult/career-icons-v2.png); */
+}
+
+.na2 {
+  background-image: url(https://cdn-images.cure.fit/www-curefit-com/image/upload/c_fill,w_600,q_auto:eco,dpr_1.25,f_auto,fl_progressive//image/test/join-the-cult/cult-for-business.png);
+  width: 31rem;
+  height: 19rem;
+  margin-left: 11rem;
+  border-radius: 32px;
+}
+
+.nh11 {
+  margin-left: 6rem;
+  width: 17rem;
+  margin-top: 2rem;
+}
+
+.nbtn1 {
+  margin-top: 9rem;
+  margin-left: 0rem;
+  width: 7rem;
+}
+
+.nr {
+  width: 92rem;
+}
+
+.nh12 {
+  text-align: center;
+  cursor: pointer;
+  margin-left: 2rem;
+  color: white;
+  width: 28rem;
+  font-weight: 600;
+  font-size: 45px;
+  margin-top: 1rem;
+  font-family: Inter-Bold, Helvetica Neue, Helvetica, Roboto, Arial, sans-serif;
+  letter-spacing: 0.01px;
+  line-height: 60px;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  background-image: linear-gradient(115deg, #f8ba00 12%, #ef5fa7 80%);
+}
+
+.nh5 {
+  width: 25rem;
+  margin-left: 3rem;
+  margin-top: 2rem;
+  text-align: center;
+}
+
+.na2 {
+  margin-left: 184px;
+}
+
+.txt {
+  width: 39rem;
+  margin-left: 52rem;
+  margin-top: 13rem;
+  opacity: 70%;
+  font-size: 22px ;
 }
