--- a/cult-fit/src/components/fitness/fitness.css
+++ b/cult-fit/src/components/fitness/fitness.css
@@ -158,8 +158,9 @@ a > h6:hover {
   float: left;
 }
 
-.jsbtn1 {
-  width: 34rem;
+.sbtn1 {
+  position: relative;
+  bottom: 5rem;
 }
 
 .jsbt {
@@ -220,4 +221,526 @@ a > h6:hover {
 
 .js1h26 {
   margin-left: 34px;
+}
+
+.cename {
+  position: absolute;
+  display: flex;
+  left: 9rem;
+  top: 57rem;
+}
+
+.cenamep {
+  text-decoration: underline;
+
+  font-size: 1.6rem;
+  margin-left: 18px;
+  margin-top: 5px;
+}
+
+i {
+  margin-left: 1rem;
+  font-size: 2rem;
+}
+
+.nch4 {
+  opacity: 70%;
+}
+
+.nc {
+  margin-top: 8rem;
+  text-align: center;
+}
+
+.nch1 {
+  margin-top: 2rem;
+  margin-left: 9px;
+  font-size: 3rem;
+}
+
+.simg1 {
+  height: 27rem;
+  width: 25rem;
+  margin-left: 35rem;
+  border-radius: 9px;
+  opacity: 60%;
+}
+
+.simg1:hover {
+  height: 28rem;
+  width: 26rem;
+  opacity: 100%;
+}
+
+.simg2 {
+  height: 27rem;
+  width: 25rem;
+  margin-left: 35rem;
+  border-radius: 9px;
+  opacity: 60%;
+}
+
+.simg2:hover {
+  height: 28rem;
+  width: 26rem;
+  opacity: 100%;
+}
+
+.simg3 {
+  height: 27rem;
+  width: 25rem;
+  margin-left: 35rem;
+  border-radius: 9px;
+  opacity: 60%;
+}
+
+.simg3:hover {
+  height: 28rem;
+  width: 26rem;
+  opacity: 100%;
+}
+
+.simg4 {
+  height: 27rem;
+  width: 25rem;
+  margin-left: 35rem;
+  border-radius: 9px;
+  opacity: 60%;
+}
+
+.simg4:hover {
+  height: 28rem;
+  width: 26rem;
+  opacity: 100%;
+}
+
+.btn3 {
+  text-align: center;
+  position: relative;
+  bottom: 4rem;
+}
+.btn1 {
+  text-align: center;
+  position: relative;
+  bottom: 0rem;
+}
+.btn2 {
+  text-align: center;
+  position: relative;
+  bottom: 4rem;
+}
+.btn4 {
+  text-align: center;
+  position: relative;
+  bottom: 4rem;
+}
+
+.sbtn1 {
+  background: rgb(255 255 255 / 20%);
+  font-weight: 700;
+  color: white;
+  border-radius: 5px;
+  padding: 5px 2rem;
+}
+
+.sbtn2 {
+  background: rgb(255 255 255 / 20%);
+  font-weight: 700;
+  color: white;
+  border-radius: 5px;
+  padding: 5px 2rem;
+}
+.sbtn3 {
+  background: rgb(255 255 255 / 20%);
+  font-weight: 700;
+  color: white;
+  border-radius: 5px;
+  padding: 5px 2rem;
+}
+.sbtn4 {
+  background: rgb(255 255 255 / 20%);
+  font-weight: 700;
+  color: white;
+  border-radius: 5px;
+  padding: 5px 2rem;
+}
+
+.hr1 {
+  margin-left: 5rem;
+}
+
+.h1img {
+  width: 22rem;
+  border-top-right-radius: 9px;
+  border-top-left-radius: 9px;
+}
+
+.nub {
+  position: relative;
+  top: 3rem;
+  color: white;
+  background: #908f8f;
+  left: 1rem;
+  width: 6rem;
+  padding-left: 1rem;
+  border-radius: 11px;
+  padding-right: 1rem;
+}
+
+.aimg {
+  text-align: center;
+  width: 22rem;
+  background-color: #2d3745;
+  border-bottom-right-radius: 9px;
+  border-bottom-left-radius: 9px;
+}
+
+.abtn {
+  margin-bottom: 1rem;
+  font-weight: 700;
+  font-size: 14px;
+  background: rgb(255 255 255 / 10%);
+  color: white;
+  border: none;
+  border-radius: 11px;
+  padding: 2px 1rem;
+}
+
+.ap {
+  padding-top: 1rem;
+}
+
+.hr1 {
+  width: 92rem;
+  margin-left: 1rem;
+}
+
+.ncch4 {
+  margin-top: 1rem;
+}
+
+table {
+  width: 64rem;
+  margin-left: 20rem;
+  margin-top: 6rem;
+}
+
+th {
+  width: 16rem;
+}
+
+.td1 {
+  display: table-caption;
+  padding-left: 2rem;
+  padding-top: 2rem;
+  width: 11rem;
+}
+
+.tbtn1 {
+  color: #f06055;
+  font-weight: 600;
+  padding: 7px 1rem;
+  border-radius: 9px;
+  margin-top: 3rem;
+  margin-left: 1.5rem;
+}
+.tbtn2 {
+  color: #f06055;
+  font-weight: 600;
+  padding: 7px 1rem;
+  border-radius: 9px;
+  margin-top: 3rem;
+  margin-left: 1.5rem;
+}
+.tbtn3 {
+  color: #f06055;
+  font-weight: 600;
+  padding: 7px 1rem;
+  border-radius: 9px;
+  margin-top: 3rem;
+  margin-left: 1.5rem;
+}
+
+.timg1 {
+  padding-bottom: 1rem;
+  padding-left: 1.8rem;
+}
+
+.timg3 {
+  padding-left: 1.8rem;
+}
+
+.bh {
+  text-align: center;
+  margin-top: 5rem;
+}
+
+.bh1 {
+  font-size: 4rem;
+  font-weight: 700;
+}
+
+.bicimg1 {
+  width: 17rem;
+  border-radius: 10px;
+  opacity: 50%;
+}
+
+.bicimg1:hover {
+  opacity: 100%;
+}
+
+.bicbtn1 {
+  background: rgb(255 255 255 / 20%);
+  border-radius: 5px;
+  padding: 4px 8px;
+  color: white;
+  font-weight: 700;
+  opacity: 80%;
+}
+
+.bic1 {
+  margin-left: 11rem;
+  margin-top: 4rem;
+}
+
+.btnbic1 {
+  margin-top: -4rem;
+  margin-left: 3rem;
+}
+
+.nic {
+  background-image: url(https://cdn-images.cure.fit/www-curefit-com/image/upload/c_fill,q_auto:eco,dpr_1.25,f_auto,fl_progressive/image/vm/25fb312f-19c2-4495-8d92-8e807b68b67d.jpeg);
+  margin-top: 3rem;
+}
+
+.nic1 {
+  margin-left: 12rem;
+}
+
+.nicimg1 {
+  margin: 3rem;
+}
+
+.nich1 {
+  margin: 0 0 3rem 3rem;
+}
+
+.nicds1 {
+  margin-bottom: -1rem;
+  margin-left: 3.3rem;
+}
+
+.nicds2 {
+  margin-left: 4.6rem;
+}
+
+.nicimgd1 {
+  margin-left: 3px;
+}
+
+.nicimg2 {
+  position: relative;
+  right: 1.5rem;
+  width: 1.1rem;
+  top: 1.2rem;
+}
+
+.nich6 {
+  font-size: 18px;
+}
+
+.nicc {
+  display: flex;
+  margin-top: 5rem;
+  margin-left: 3.3rem;
+}
+
+.nicbtn1 {
+  margin-left: 3.3rem;
+}
+
+.niccbtn1 {
+  background: rgb(255 255 255 / 10%);
+  color: white;
+  font-weight: 700;
+  border-radius: 6px;
+  padding: 10px 1rem;
+}
+
+.niccbtn2 {
+  background: rgb(255 255 255);
+  color: #f06055;
+  font-weight: 700;
+  border-radius: 6px;
+  padding: 10px 1rem;
+  margin-left: 2rem;
+}
+
+.lst {
+  margin-top: 1rem;
+  margin-left: 3.3rem;
+}
+
+.lsimg {
+  width: 26px;
+  float: left;
+  padding-right: 5px;
+}
+
+.alimg1 {
+  margin-top: 3rem;
+  width: 41rem;
+  height: 39rem;
+  border-radius: 20px;
+}
+
+.alimg2 {
+  margin-top: 3rem;
+  width: 41rem;
+  height: 39rem;
+  border-radius: 20px;
+}
+
+.color {
+  background-image: url(https://cdn-images.cure.fit/www-curefit-com/image/upload/c_fill,q_auto:eco,dpr_1.25,f_auto,fl_progressive/image/vm/25fb312f-19c2-4495-8d92-8e807b68b67d.jpeg);
+}
+
+.bel {
+  background-image: url(https://cdn-images.cure.fit/www-curefit-com/image/upload/c_fill,q_auto:eco,dpr_1.25,f_auto,fl_progressive/image/vm/25fb312f-19c2-4495-8d92-8e807b68b67d.jpeg);
+  margin-left: 17rem;
+  border-radius: 45px;
+  width: 66rem;
+}
+
+.vid2 {
+  width: 75rem;
+  opacity: 27%;
+  border-radius: 42px;
+}
+
+.vid {
+  position: absolute;
+  width: 2rem;
+  right: 83rem;
+  bottom: -361.5rem;
+  height: 41rem;
+}
+
+.ay {
+  width: 94.9rem;
+}
+
+.pimg {
+  width: 36rem;
+  margin-left: 4rem;
+  margin-top: 8rem;
+}
+
+.r1 {
+  margin-left: 11rem;
+}
+
+.ala {
+  margin-top: 8rem;
+}
+
+.ps {
+  text-align: left;
+  cursor: default;
+  margin: 0;
+  color: rgb(255 255 255 / 80%);
+  font-size: 30px;
+  font-family: Inter-Regular, Helvetica Neue, Helvetica, Roboto, Arial,
+    sans-serif;
+  letter-spacing: -0.5px;
+  line-height: 45px;
+  padding: 20px 0px;
+}
+
+.ph3 {
+  width: 34rem;
+  text-align: left;
+  cursor: default;
+  margin: 0;
+  color: white;
+  font-size: 40px;
+  font-family: Inter-Bold, Helvetica Neue, Helvetica, Roboto, Arial, sans-serif;
+  letter-spacing: 0.01px;
+  line-height: 60px;
+  padding: 20px 0px;
+  margin-bottom: 30px;
+  font-weight: 700;
+}
+
+.ph5 {
+  width: 17rem;
+  opacity: 100%;
+}
+
+.ph52 {
+  position: relative;
+  top: 7rem;
+  right: 20rem;
+  color: blue;
+}
+
+.okdiv {
+  background-image: url(https://cdn-images.cure.fit/www-curefit-com/image/upload/c_fill,w_1600,ar_2,q_auto:eco,dpr_2,f_auto,fl_progressive/image/vm/e33780ba-8a13-4254-b2f1-2b50be6273e0.svg);
+  margin-top: 3rem;
+  height: 38rem;
+  background-size: 97rem;
+  background-repeat: no-repeat;
+}
+
+.fi {
+  background-image: url(https://cdn-images.cure.fit/www-curefit-com/image/upload/c_fill,w_1200,ar_2.66,q_auto:eco,dpr_1.25,f_auto,fl_progressive//image/test/download-app/download-app-variant-3.png);
+  background-repeat: no-repeat;
+  background-size: 71rem;
+  padding-left: 4rem;
+  padding-top: 2rem;
+  margin-left: 12rem;
+  width: 71rem;
+  height: 25rem;
+  margin-top: 4rem;
+  border-radius: 65px;
+}
+
+.fih3 {
+  width: 26rem;
+  font-weight: 700;
+  font-size: 33px;
+  margin-bottom: 4rem;
+}
+
+.fid2 {
+  text-align: start;
+  cursor: default;
+  margin: 0;
+  color: rgb(255 255 255 / 80%);
+  font-size: 18px;
+  font-family: Inter-Medium, Helvetica Neue, Helvetica, Roboto, Arial,
+    sans-serif;
+  letter-spacing: 0px;
+  line-height: 22px;
+  max-width: 475px;
+  margin-bottom: 8.5%;
+}
+
+.fiimg1 {
+  position: relative;
+  opacity: 1;
+  transition: opacity 150ms ease 0s;
+  top: -20px;
+  left: 0px;
+  width: 9rem;
+}
+
+.fiimg2 {
+  position: relative;
+  opacity: 1;
+  transition: opacity 150ms ease 0s;
+  top: -20px;
+  left: 2rem;
+  width: 10rem;
 }
