--- a/cult-fit/src/components/cultpasselite/cultelite.css
+++ b/cult-fit/src/components/cultpasselite/cultelite.css
@@ -60,12 +60,12 @@
   position: absolute;
   background: rgb(50, 50, 52);
   left: 61rem;
-  top: 72rem;
+  top: 71.4rem;
   border-radius: 10px;
   border: 1px solid rgba(181, 134, 32, 0.3);
   z-index: -2;
   width: 23rem;
-  height: 24.6rem;
+  height: 24rem;
 }
 
 .limg {
@@ -172,7 +172,7 @@
 .sou {
   margin-left: 9rem;
   width: 26rem;
-
+  margin-right: -7rem;
   margin-top: 2rem;
 
   backdrop-filter: blur(100px);
@@ -183,4 +183,13 @@
 
 .sou:hover {
   background: rgb(255 255 255 / 10%);
+}
+
+.end {
+  display: flex;
+  margin-left: -3rem;
+}
+
+.ct {
+  text-decoration: line-through;
 }
