--- a/cult-fit/src/components/fitness/fitness.css
+++ b/cult-fit/src/components/fitness/fitness.css
@@ -49,9 +49,13 @@ a > h6:hover {
   opacity: 100%;
 }
 
-.lastdiv {
-  position: relative;
-  top: 34rem;
+.lastdivfit {
+  position: absolute;
+  top: 515rem;
+  right: 0rem;
+  width: 95.6rem;
+  background: #2c2c2b;
+  padding-left: 11rem;
 }
 
 .fitmimg {
@@ -687,7 +691,7 @@ th {
 
 .okdiv {
   background-image: url(https://cdn-images.cure.fit/www-curefit-com/image/upload/c_fill,w_1600,ar_2,q_auto:eco,dpr_2,f_auto,fl_progressive/image/vm/e33780ba-8a13-4254-b2f1-2b50be6273e0.svg);
-  margin-top: 3rem;
+  margin-top: -20rem;
   height: 38rem;
   background-size: 97rem;
   background-repeat: no-repeat;
@@ -749,3 +753,13 @@ th {
   z-index: +5;
 }
 
+.ffterfit {
+  margin-top: 11rem;
+  padding-left: 9rem;
+  background: black;
+}
+
+.startrfit {
+  position: relative;
+  top: 4rem;
+}
