--- a/cult-fit/src/components/home/home.css
+++ b/cult-fit/src/components/home/home.css
@@ -54,6 +54,15 @@
   margin-top: 2rem;
 }
 
+.ffterhome {
+  height: 23rem;
+  position: relative;
+  top: 24rem;
+  padding-left: 9rem;
+  margin-left: 0rem;
+  background: black;
+}
+
 .hbtn2 {
   border-radius: 4px;
   background-color: #f2f2f2;
@@ -718,6 +727,9 @@ li {
   color: #f06055;
 }
 
-.ffter {
-  margin-top: -21rem;
+.lastdiv1 {
+  position: relative;
+  top: 32rem;
+  background: #1a1818;
+  padding-left: 8rem;
 }
