--- a/cult-fit/src/components/home/home.css
+++ b/cult-fit/src/components/home/home.css
@@ -253,6 +253,11 @@
   width: 22rem;
 }
 
+.ahref {
+  margin-top: -13rem;
+  margin-left: 10rem;
+}
+
 .demo2 {
   width: 22rem;
 }
@@ -350,7 +355,7 @@ li {
   backdrop-filter: blur(50px);
   font-weight: 700;
   margin-left: -1.7rem;
-  margin-top: 9rem;
+  margin-top: 4rem;
 }
 
 .bestbtn1:hover {
@@ -366,7 +371,7 @@ li {
   backdrop-filter: blur(50px);
   font-weight: 700;
   margin-left: -1.7rem;
-  margin-top: 6rem;
+  margin-top: 1rem;
 }
 
 .bestbtn2:hover {
@@ -425,7 +430,7 @@ li {
   margin-left: 159px;
   width: max-content;
   position: relative;
-  bottom: 2.3rem;
+  bottom: 7.5rem;
   font-weight: 700;
   color: #f06055;
 }
@@ -715,7 +720,7 @@ li {
 .mmimg {
   width: 95rem;
   position: absolute;
-  top: 449rem;
+  top: 438rem;
   right: 2rem;
 }
 
