--- a/cult-fit/src/components/store/store.css
+++ b/cult-fit/src/components/store/store.css
@@ -1,7 +1,11 @@
+body {
+  background-color: white;
+}
+
 .navul1 {
   display: flex;
   margin-left: 8rem;
-  margin-top: 1px;
+
   float: left;
 }
 
@@ -28,13 +32,13 @@ ul {
 }
 
 .navul1 li {
-  padding: 1.3rem 2rem;
+  padding: 1.3rem 3.1rem;
   padding-top: 13px;
   font-weight: bold;
   color: #000000;
   line-height: 20px;
   font-family: sans-serif;
-  font-size: 13px;
+  font-size: 16px;
   cursor: pointer;
   text-align: center;
   opacity: 100%;
@@ -63,26 +67,66 @@ ul {
 
 .makecardimg {
   width: 300px;
-  margin-left: 8rem;
 }
 
 .makecarddiv2 {
-  margin-left: 8rem;
   margin-top: 1rem;
   opacity: 80%;
+  color: black;
 }
 .makecarddiv3 {
-  margin-left: 8rem;
   font-size: 20px;
+  color: black;
+  font-weight: 700;
 }
 
 .makecarddiv4 {
   display: flex;
+  color: black;
   margin-top: 5px;
-  margin-left: 8rem;
 }
 
 .makecardp {
   padding-right: 27px;
   font-size: 19px;
+}
+
+.makecard {
+  width: max-content;
+  margin-left: 5rem;
+  margin-top: 2rem;
+  background-color: white;
+}
+
+.card {
+  width: 29rem;
+  float: left;
+  border-radius: 0px;
+  border: none;
+
+  background-color: white;
+}
+
+.flex {
+  margin-left: 3rem;
+}
+
+.stylishname {
+  color: #000000;
+  width: fit-content;
+  margin-left: 7.8rem;
+}
+.ghnt {
+  font-family: Poppins-Bold, Helvetica Neue, Helvetica, Roboto, Arial,
+    sans-serif;
+  font-style: italic;
+  font-size: 46px;
+  font-weight: bold;
+}
+
+.thik {
+  font-size: 31px;
+  line-height: 35px;
+  letter-spacing: 1px;
+  color: rgba(0, 0, 0, 0.6);
 }
