--- a/cult-fit/src/components/cultcmn/cultcommon.css
+++ b/cult-fit/src/components/cultcmn/cultcommon.css
@@ -1,4 +1,4 @@
-.tp {
+/* .tp {
   position: relative;
   top: 65rem;
 
@@ -121,4 +121,4 @@
   background: rgb(50, 50, 52);
   border-radius: 10px;
   border: 1px solid rgba(181, 134, 32, 0.3);
-}
+} */
