--- a/cult-fit/src/components/cultpasselite/cultelite.css
+++ b/cult-fit/src/components/cultpasselite/cultelite.css
@@ -1,7 +1,6 @@
 body {
   background-color: #080421;
 }
-
 .ppp {
   position: absolute;
   top: 6rem;
@@ -22,6 +21,26 @@ body {
 
 .cult1h5 {
   font-size: x-large;
+}
+
+.ffterhai {
+  margin-top: -35rem;
+}
+
+.lastdivhai {
+  width: 94.6rem;
+  background: #2c2c2b;
+  padding-left: 8rem;
+  padding-top: 50rem;
+}
+
+.lastdivqq {
+  position: absolute;
+  top: 388rem;
+  left: 0;
+  width: 94.6rem;
+  background: #2c2c2b;
+  padding-left: 10rem;
 }
 
 .cename2 {
@@ -196,4 +215,48 @@ body {
 
 .ct {
   text-decoration: line-through;
+}
+
+.ffter {
+  margin-top: -28rem;
+  height: 22.5rem;
+  background: black;
+}
+
+.lastdivhome {
+  position: relative;
+  top: 4rem;
+  background: #3e3e3e;
+  padding-left: 10rem;
+  padding-top: 2rem;
+  margin-left: -9rem;
+}
+
+.ffter {
+  margin-top: 7rem;
+  padding-left: 8rem;
+}
+
+.ffterhome {
+  height: 23rem;
+  position: relative;
+  top: 24rem;
+  padding-left: 9rem;
+  margin-left: 0rem;
+  background: black;
+}
+
+.startr {
+  position: relative;
+  top: 0rem;
+  left: 0rem;
+  padding-top: 4rem;
+}
+
+.vod {
+  padding-left: 12rem;
+  padding-bottom: 3rem;
+}
+.vod1 {
+  border-radius: 11%;
 }
