--- a/cult-fit/src/components/fitness/fitness.css
+++ b/cult-fit/src/components/fitness/fitness.css
@@ -93,7 +93,7 @@ a > h6:hover {
 
 .fitcard1 {
   width: 14rem;
-  background: rgb(255 255 255 / 5%);
+  background: #ffffff0d;
   border: 1px solid rgb(255 255 255 / 20%);
   backdrop-filter: blur(50px);
   border-radius: 10px;
@@ -156,6 +156,10 @@ a > h6:hover {
 .js1h6 {
   margin-left: -2.8rem;
   float: left;
+}
+
+.js1 {
+  background: black;
 }
 
 .sbtn1 {
@@ -749,3 +753,17 @@ th {
   z-index: +5;
 }
 
+.ffterfit {
+  margin-top: 11rem;
+  padding-left: 9rem;
+  background: black;
+}
+
+.startrfit {
+  position: relative;
+  top: 4rem;
+}
+
+.hlink:focus {
+  background-color: #ffffff;
+}
