--- a/frontend/src/components/store/store.css
+++ b/frontend/src/components/store/store.css
@@ -254,6 +254,7 @@ ul {
 .dep1 {
   padding: 3rem 1px;
   color: rgb(142, 138, 138);
+  font-size: 21px;
 }
 .dechoosesize2 {
   color: #ff3278;
@@ -307,7 +308,8 @@ ul {
   text-align: left;
   opacity: 0.92;
   line-height: 1.64;
-  font-size: 15px;
+  font-size: 21px;
+  list-style: disc;
 }
 
 .deprode {
