--- a/frontend/src/components/store/cart.css
+++ b/frontend/src/components/store/cart.css
@@ -1,25 +1,30 @@
 #ppoo {
-  padding: 8rem 5rem -2rem 0rem;
+  padding: 8rem 5rem 0rem 0rem;
 }
 
-.style-prefix-z3oc7s {
-  float: left;
-}
+/* .style-prefix-z3oc7s {
+  min-width: 90px;
+  max-width: 128px;
+  min-height: 110px;
+} */
 .style-prefix-cv2pe {
   display: flex;
-    border: 2px solid #fc2779;
-    width: fit-content;
-    padding: 9px 30px 9px 30px;
-    border-radius: 21px;
-    position: relative;
-    left: 16rem;
-    bottom: 267px;
+  border: 2px solid #fc2779;
+  width: fit-content;
+  padding: 9px 30px 9px 30px;
+  border-radius: 21px;
+  position: relative;
+  left: 16rem;
+  bottom: 267px;
 }
 
 .style-prefix-1d4sgiw {
-    position: relative;
-    bottom: 0rem;
-    left: 0rem;
+  position: relative;
+  bottom: 19rem;
+  left: 17rem;
+}
+.style-prefix-1im2vgb {
+  font-size: 20px;
 }
 
 #ii1 {
@@ -28,10 +33,20 @@
 
 .style-prefix-jtzl24 {
   font-size: 1.3rem;
+  font-weight: 500;
+}
+
+.style-prefix-1k9h66n {
+  letter-spacing: 3px;
+  font-size: 21px;
+  opacity: 90%;
 }
 
 .style-prefix-1d4sgiw {
   line-height: 50px;
+}
+.style-prefix-49ww5q {
+  font-size: 29px;
 }
 
 /* .style-prefix-cv2pe {
@@ -62,14 +77,22 @@
 
 #ppppp {
   position: relative;
-  bottom: 28rem;
-  left: 27rem;
+  bottom: 34rem;
+  left: 29rem;
   width: 5rem;
   height: 1rem;
 }
+/* .padding0-md {
+  position: fixed;
+  left: 69rem;
+  width: auto;
+  top: 10rem;
+} */
 .padding0-md {
-  position: relative;
-  left: 8rem;
+  left: 58rem;
+  width: auto;
+  position: absolute;
+  top: 2rem;
 }
 
 .multiline {
@@ -121,7 +144,7 @@
   background-image: linear-gradient(103deg, #f74530, #ff2e73);
   color: white;
   font-weight: 600;
-  padding: 12px 40px;
+  padding: 5px 4rem;
   border-radius: 40px;
   float: right;
 }
@@ -157,4 +180,11 @@
   margin: 12rem 0px;
   font-size: 5rem;
   background: gray;
+}
+
+#kil {
+  width: 56%;
+  margin-left: 16rem;
+  position: relative;
+  right: 24rem;
 }
