add new function for set total prize in cart

--- a/frontend/src/components/store/cart.css
+++ b/frontend/src/components/store/cart.css
@@ -14,14 +14,14 @@
   padding: 9px 30px 9px 30px;
   border-radius: 21px;
   position: relative;
-  left: 16rem;
-  bottom: 267px;
+  left: 14rem;
+  bottom: 293px;
 }
 
 .style-prefix-1d4sgiw {
   position: relative;
-  bottom: 19rem;
-  left: 17rem;
+  bottom: 18rem;
+  left: 14rem;
 }
 .style-prefix-1im2vgb {
   font-size: 20px;
@@ -34,6 +34,8 @@
 .style-prefix-jtzl24 {
   font-size: 1.3rem;
   font-weight: 500;
+  width: 18rem;
+  letter-spacing: 2px;
 }
 
 .style-prefix-1k9h66n {
@@ -77,8 +79,8 @@
 
 #ppppp {
   position: relative;
-  bottom: 34rem;
-  left: 29rem;
+  bottom: 37rem;
+  left: 27rem;
   width: 5rem;
   height: 1rem;
 }
@@ -183,7 +185,7 @@
 }
 
 #kil {
-  width: 56%;
+  width: 52%;
   margin-left: 16rem;
   position: relative;
   right: 24rem;
