--- a/frontend/src/components/header/style.css
+++ b/frontend/src/components/header/style.css
@@ -124,8 +124,6 @@ a:hover {
   padding-left: 111px;
 }
 
-
-
 h5 {
   cursor: pointer;
   color: white;
@@ -152,4 +150,10 @@ h5:hover {
 #bas {
   position: fixed;
   z-index: +4;
+  width: -webkit-fill-available;
+}
+
+.nav-link {
+  font-size: 2rem;
+  font-weight: 800;
 }
