--- a/frontend/src/components/cultpasslive/cultlive.css
+++ b/frontend/src/components/cultpasslive/cultlive.css
@@ -6,4 +6,11 @@
   margin-top: 2rem;
 }
 
-
+.lastdivqq {
+  position: absolute;
+  top: 458rem;
+  left: 0;
+  width: 100%;
+  background: #2c2c2b;
+  padding: 6rem 7rem;
+}
