--- a/frontend/src/components/store/cart.css
+++ b/frontend/src/components/store/cart.css
@@ -9,7 +9,7 @@
 } */
 .style-prefix-cv2pe {
   display: flex;
-  border: 2px solid #fc2779;
+  border: 3px solid #fc2779;
   width: fit-content;
   padding: 9px 30px 9px 30px;
   border-radius: 21px;
@@ -68,6 +68,8 @@
 
 .quantity-bought {
   padding: 0px 1rem;
+  width: 3rem;
+  font-weight: bold;
 }
 
 #ttttt {
@@ -77,7 +79,12 @@
   padding-top: 2rem;
   padding-bottom: 22rem;
 }
-
+.minus-sign {
+  width: 19px;
+}
+.plus-sign {
+  width: 19px;
+}
 #ppppp {
   position: relative;
   bottom: 37rem;
@@ -99,19 +106,20 @@
 }
 
 .multiline {
-  font-size: 19px;
+  font-size: 21px;
+  font-weight: 600;
 }
 .primary-color {
   margin-top: -25px;
   margin-left: 25rem;
-
-  font-size: 19px;
+  font-size: 23px;
   color: #fc2779;
 }
 
 .checkout-delivery-container {
   border-bottom: 1px solid;
   padding-bottom: 1rem;
+  width: max-content;
 }
 
 .checkout-price-detail-cell {
@@ -157,7 +165,7 @@
 }
 
 #opopop {
-  width: 32rem;
+  width: 37rem;
   position: absolute;
   border-radius: 10px;
   box-shadow: rgb(0 0 0 / 9%) 0px 6px 10px 0px;
@@ -177,6 +185,7 @@
   opacity: 0.75;
   border-radius: 13px;
   padding: 0.8rem 4rem;
+  margin-left: 4rem;
 }
 .kkll {
   text-align: center;
