--- a/frontend/src/components/store/cart.css
+++ b/frontend/src/components/store/cart.css
@@ -68,6 +68,8 @@
 
 .quantity-bought {
   padding: 0px 1rem;
+  font-size: 20px;
+  font-weight: bold;
 }
 
 #ttttt {
@@ -142,14 +144,30 @@
 .jkjkl1 {
   margin-left: auto;
 }
+.checkout-page {
+  height: 40rem;
+}
 
+.checkout-delivery-selected-address-container {
+  position: relative;
+  top: 6rem;
+  left: 4rem;
+}
+.minus-sign {
+  width: 1rem;
+}
+.plus-sign {
+  width: 1rem;
+}
 .checkout-proceed-button {
   background-image: linear-gradient(103deg, #f74530, #ff2e73);
   color: white;
   font-weight: 600;
-  padding: 5px 4rem;
+  padding: 13px 3rem;
   border-radius: 40px;
   float: right;
+  width: max-content;
+  font-size: 26px;
 }
 .coupon-code-input {
   border: none;
@@ -157,7 +175,7 @@
 }
 
 #opopop {
-  width: 32rem;
+  width: 33rem;
   position: absolute;
   border-radius: 10px;
   box-shadow: rgb(0 0 0 / 9%) 0px 6px 10px 0px;
