--- a/frontend/src/components/store/cart.css
+++ b/frontend/src/components/store/cart.css
@@ -115,6 +115,9 @@
   font-size: 23px;
   color: #fc2779;
 }
+/* .checkout-page {
+  height: 100vh;
+} */
 
 .checkout-delivery-container {
   border-bottom: 1px solid;
